feat(TPSVC-19292): update to Java 17 (#19)
* feat(TPSVC-19292): update to Java 17